mdapipkg/objects/Chapter_Health__c.object
<CustomObject>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT(Account__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Chapter Health</relationshipLabel>
        <relationshipName>Chapter_Health</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Education Meeting</fullName>
                </value>
                <value>
                    <fullName>Forum Meeting</fullName>
                </value>
                <value>
                    <fullName>Event Meeting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_Sum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Age Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualDueslocalcurrency__c</fullName>
        <label>Annual Dues (local currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Chapter_Dues__c</fullName>
        <label>Annual Chapter Dues (US$)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Chapter_Education_Budget__c</fullName>
        <label>Annual Chapter Learning Budget (US$)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Chapter_Forum_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total Annual Chapter budget for Forum (US$)</inlineHelpText>
        <label>Total Annual Chapter budget-Forum (US$)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>As_of__c</fullName>
        <label>As of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Av_Age_Members__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Age</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Av_Annual_Education_Rating_Current__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Average Annual Learning Rating (current fiscal year-to-date)</inlineHelpText>
        <label>Avg Annual Learning Rating (current FY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Av_Annual_Education_Rating_Prev__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Average Annual Learning Rating (previous fiscal year)</inlineHelpText>
        <label>Avg Annual Learning Rating (past FY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Av_Member_Event_Attend_Current__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Average percent member participation in Chapter Events (current fiscal year-to-date)</inlineHelpText>
        <label>Chapter Event Participation (current FY)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Av_Member_Event_Attend_Prev__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Average percent member participation in Chapter Events (previous fiscal year)</inlineHelpText>
        <label>Chapter Event Participation (past FY)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Average_Number_Attending_Events__c</fullName>
        <inlineHelpText>Members attending events as a % of total # who can attend event 

5 for 75% - 100% attendance 
4 for 50% - 74% attendance 
3 for 25% - 49% attendance 
2 for 10% - 24% attendance 
1 for less than 10% attendance</inlineHelpText>
        <label>Average Number Attending Events (1-5)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Profile_Completion__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Average profile completion % among all members.</description>
        <label>Average Profile Completion</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Average_Tenure__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Tenure</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Age_Members__c</fullName>
        <formula>(Age_Sum__c /  Number_Pri_Sec_Members__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Member Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Tenure__c</fullName>
        <formula>IF(Number_Pri_Sec_Members__c = 0, 0, Tenure_Sum__c / Number_Pri_Sec_Members__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Chapter Tenure</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_of_Events__c</fullName>
        <inlineHelpText>1 Not at all 
2 A little 
3 Somewhat 
4 Very much so 
5 Strongly 

Consider 
How balanced is the overall program? At least one of each of the following as a minimum: Personal (meaning leadership/development/skills topics), Community, Business, Fami</inlineHelpText>
        <label>Even Balance of Events (1-5)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_Marketing_Ideas__c</fullName>
        <inlineHelpText>Insert novel and interesting marketing ideas (pre and post) that the chapter has used. Why were they effective ideas?. Add attachments where samples exist.</inlineHelpText>
        <label>Best Marketing Ideas</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Best_Speaker_Utilized__c</fullName>
        <inlineHelpText>Insert details of the best speaker the chapter has utilized and why. Why were they Extraordinary?</inlineHelpText>
        <label>Best Speaker Utilized</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BoardRating__c</fullName>
        <formula>IF ( Board__c &lt;&gt; 0, IF( 
RBM_Participation_Limit_Green__c &gt; 0, 

IF( 
Board__c &gt;= RBM_Participation_Limit_Green__c , IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;green&quot;), 
IF( Board__c &gt;= RBM_Participation_Limit_Yellow__c , IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;yellow&quot;), 
IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;red&quot;))) 
, 

IF( 
Board__c&gt;= Region2__r.RBM_Participation_Limit__c , IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;green&quot;), 
IF( Board__c &gt;= Region2__r.RBM_Participation_Limit_Yellow__c , IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;yellow&quot;),IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;red&quot;)))),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Board rating based on Regional Limits</inlineHelpText>
        <label>Board Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Board__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Board</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>&quot;C - &quot;</defaultValue>
        <label>C -</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Alicia__c</fullName>
        <label>Category ( Alicia )</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pink</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chap_Chair_and_3_more_Officers_by_1_Oct__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Chapter Chair and 3 or more Officers identified by 1 October</inlineHelpText>
        <label>Elect CC and 3/more Officers by 1 Oct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter_Admin_Phone_Number__c</fullName>
        <formula>CASE( Chapter_Administrator__r.Preferred_Phone__c , &quot;Business Phone&quot;, Chapter_Administrator__r.Phone , &quot;Home Phone&quot;, Chapter_Administrator__r.HomePhone , &quot;Mobile Phone&quot;, Chapter_Administrator__r.MobilePhone , Chapter_Administrator__r.Phone )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chapter Admin Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_Admin_Status__c</fullName>
        <inlineHelpText>Chapter Administrator Status</inlineHelpText>
        <label>Chapter Admin (FT,PT, None)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Full-time</fullName>
                </value>
                <value>
                    <fullName>Part-time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chapter_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chapter Administrator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Chapter Record</relationshipLabel>
        <relationshipName>Account2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chapter_Administrator_attendance_at_CAW__c</fullName>
        <formula>IF( Is_CA_Workshop_Attendance__c=True, 3,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CA attended CAW in past fiscal year = Platinum, 
CA attended CAW in past two fiscal years = Silver, 
CA attended CAW in past three fiscal years = Bronze</inlineHelpText>
        <label>Chapter Administrator attendance at CAW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chapter Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_Ed_Chair_Identified__c</fullName>
        <formula>IF( Chapter_Ed_Chair_backend__c &gt;= 2, TRUE, FALSE )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Chapter Chair and Education Chair identified by 1 July</inlineHelpText>
        <label>Chapter Chair/Learning Officer by 1 July</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter_Ed_Chair_backend__c</fullName>
        <description>Count of Contact Positions that match the criteria for Chapter Chair and Learning Officer.  Set by CH batch process, used by Chapter_Ed_Chair_Identified__c formula field to display checkbox on page if count is &gt;= 2.</description>
        <label>Chapter &amp; Ed Chair backend</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_Ed_Current_backend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is stamped if there is a current Chapter Ed Chair via daily ch health batch and is used in Is_Chapter_Ed_Chair_Identified__c formula field</description>
        <label>Chapter Ed Current (backend) DEPREC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter_Ed_Elect_backend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is stamped on the backend by daily ch health batch, and is used in the Is_Chapter_Ed_Chair_Identified__c formula</description>
        <label>Chapter Ed Elect (backend) DEPREC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter_Education_Alignment__c</fullName>
        <formula>(CASE( How_ECODEd_are_Events__c ,&quot;1&quot;,1,&quot;2&quot;,2,&quot;3&quot;,3,&quot;4&quot;,4,&quot;5&quot;,5,0) 
+CASE( Balance_of_Events__c ,&quot;1&quot;,1,&quot;2&quot;,2,&quot;3&quot;,3,&quot;4&quot;,4,&quot;5&quot;,5,0) 
+CASE( Connectedness__c ,&quot;1&quot;,1,&quot;2&quot;,2,&quot;3&quot;,3,&quot;4&quot;,4,&quot;5&quot;,5,0) 
+ CASE( Chapter_Education_Health_formula__c , &quot;Yes&quot;, 5, &quot;No&quot;, 0 ,0))/20</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chapter Education Alignment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Chapter_Education_Health__c</fullName>
        <formula>(CASE ( Average_Number_Attending_Events__c , &quot;1&quot;,1,&quot;2&quot;,2,&quot;3&quot;,3,&quot;4&quot;,4,&quot;5&quot;,5,0 ) 
+CASE ( Number_of_Ed__c , &quot;1&quot;,1,&quot;2&quot;,2,&quot;3&quot;,3,&quot;4&quot;,4,&quot;5&quot;,5,0 ) 
+CASE ( Education_Officers_Trained__c , &quot;No&quot;,0, &quot;Yes&quot;, 5,0 ) 
+CASE ( Number_of_Events_in_Current_FY__c , &quot;No&quot;,0, &quot;Yes&quot;, 5,0 ) 
) 
/20</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chapter Education Health</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Chapter_Education_Health_formula__c</fullName>
        <inlineHelpText>Is the Incoming Ed. Chair named? Yes or No. System will allocate weighting</inlineHelpText>
        <label>EO Succession Planning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chapter_Health_Standard__c</fullName>
        <formula>&apos;formula to build&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chapter Health Standard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_Size__c</fullName>
        <inlineHelpText>Large Chapter – 75+ 
Medium Chapter – 40-75 
Small Chapter – Under 40</inlineHelpText>
        <label>Chapter Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chapter_event_participation__c</fullName>
        <description>This field is used to calculate rating based on % value of Chapter Event Participation (current FY) field</description>
        <formula>IF( Av_Member_Event_Attend_Current__c  &gt;= (50/100), 3, IF(Av_Member_Event_Attend_Current__c  &gt;= (30/100),2,IF(Av_Member_Event_Attend_Current__c  &lt;= (29.9/100),1,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>50% to 100% = Platinum, 
30% to 49.9% = Silver, 
29.9% and below = Bronze</inlineHelpText>
        <label>Chapter event participation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_have_a_Member_Transition_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does your Chapter have a Transition Plan?</inlineHelpText>
        <label>Chapter have a Member Transition Plan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter_have_an_Integration_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does your Chapter have an Integration Plan?</inlineHelpText>
        <label>Chapter have an Integration Plan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter_represented_at_RBM_past_fiscal_Y__c</fullName>
        <formula>IF( Is_Chapter_Representation_Regional_Board__c = True ,3,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>1 or more chapter members attended RBM past fiscal year = Platinum</inlineHelpText>
        <label>Chapter represented at RBM past fiscal Y</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_retention_plus_graduate_class__c</fullName>
        <label>% Chapter retention plus graduate class</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Chapter_retention_rate__c</fullName>
        <formula>IF(Pct_Chapter_Retention__c &gt;= 0.95, 3, 
  IF(Pct_Chapter_Retention__c &gt;= 0.90, 2,
    IF(Pct_Chapter_Retention__c &lt;= 0.89, 1, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>95% to 100% = Platinum, 
90% to 94% = Silver, 
89% and below = Bronze</inlineHelpText>
        <label>Chapter retention rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complete_member_profile_on_Exchange__c</fullName>
        <formula>IF( Completed_Member_Profiles__c &gt;= (65/100), 3, IF(Completed_Member_Profiles__c &gt;= (50/100),2,IF(Completed_Member_Profiles__c &lt;= (49.9/100),1,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>65% to 100% = Platinum, 
50% to 64.9% = Silver, 
49.9% and below = Bronze</inlineHelpText>
        <label>Complete member profile on Exchange</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed_M2MX_Profile_S_P__c</fullName>
        <description>Total field to hold the total spouse/partners with m2mx profile completion (used in formula field calculation of percentage on ch health)</description>
        <label>Completed M2MX Profile S/P</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed_M2Mx_Profiles__c</fullName>
        <formula>IF(Number_Primary_Members_Current__c  + Number_Spouse_Partners__c = 0, 0,
(Number_of_Completed_Member_M2Mx_Profiles__c + Number_of_Completed_S_P_M2Mx_Profiles__c)
/
(Number_Primary_Members_Current__c + Number_Spouse_Partners__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Completed M2Mx Profiles</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Completed_Member_Profiles__c</fullName>
        <formula>IF(Number_Primary_Members_Current__c = 0, 0, Number_of_Completed_Member_Profiles__c/  Number_Primary_Members_Current__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Completed Member Profiles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Connectedness__c</fullName>
        <inlineHelpText>1 Not at all 
2 A little 
3 Somewhat 
4 Very much so 
5 Strongly 

Consider: 
Participation (calls/meetings/e-mail/responsiveness) 
Program in Exchange 
Speaker suggestions 
Nominates for awards 
Shows awareness of Reg Goals 
Opens Events to R</inlineHelpText>
        <label>EO Connectedness with REO and YPOI (1-5)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Chapter Health</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Chapter Health (Contact 2)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_Chapter_Chair_by_1_Nov__c</fullName>
        <label>Count Chapter Chair by 1 Nov backend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Officers_Elect_by_1_Nov__c</fullName>
        <label>Count of Officers Elect by 1 Nov backend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Annual_Chapter_Strategic_Plan__c</fullName>
        <formula>IF(Is_Current_Strategic_Plan__c,3,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Annual Chapter Strategic Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Ed_Chair_Trained__c</fullName>
        <inlineHelpText>Is current Ed Officer Trained? Yes or No system will allocate weighting</inlineHelpText>
        <label>Current Ed Chair Trained</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Ed_Chair_past_Champ_Roles_Awards__c</fullName>
        <label>Current Ed Chair past Champ Roles Awards</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Curriculum_category__c</fullName>
        <label>Curriculum category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>D__c</fullName>
        <defaultValue>&quot;D - &quot;</defaultValue>
        <label>D -</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Chapter_Last_Updated__c</fullName>
        <description>Date the last time a CA reviewed and/or updated their chapter health information</description>
        <label>Date Chapter Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Visited__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Last Visited</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Does_Chapter_hold_moderator_meetings__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does your Chapter hold moderator meetings?</inlineHelpText>
        <label>Does Chapter hold moderator meetings?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E2__c</fullName>
        <defaultValue>&quot;E - &quot;</defaultValue>
        <label>E -</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E__c</fullName>
        <defaultValue>&quot;E - &quot;</defaultValue>
        <label>E -</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ed_Chair_Email__c</fullName>
        <formula>Ed_Chair_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ed Chair Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ed_Chair_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ed Chair Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Ed Chair Name on this Chapter</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ed_Chair_Phone_Number__c</fullName>
        <formula>CASE( Ed_Chair_Name__r.Preferred_Phone__c, &quot;Business Phone&quot;, Ed_Chair_Name__r.Phone, &quot;Mobile Phone&quot;, Ed_Chair_Name__r.MobilePhone , &quot;Home Phone&quot;, Ed_Chair_Name__r.HomePhone , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ed Chair Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ed_Chair_Read_Ed_EBook__c</fullName>
        <label>Ed Chair Read Ed EBook?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Budget__c</fullName>
        <label>Education Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Education_Budget_per_Member__c</fullName>
        <formula>IF ( Number_of_Members__c &lt;&gt; 0, Education_Budget__c / Number_of_Members__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Education budget / number of mem</inlineHelpText>
        <label>Education Budget per Member</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Education_Metric_Type__c</fullName>
        <formula>If(Today()&gt;DateValue( Fiscal_Year_End__c) , &apos;Historical&apos;, &apos;Current&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Education Metric Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Officers_Trained__c</fullName>
        <inlineHelpText>Is the Education Officer trained yes or no. System will allocate weighting</inlineHelpText>
        <label>Education Officer Trained</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Education_Theme__c</fullName>
        <label>Education Theme</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Education_Year_Theme_if_any__c</fullName>
        <label>Education Year Theme (if any)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elect_CC_and_3_more_Officers_by_1_Nov__c</fullName>
        <formula>IF(Count_Chapter_Chair_by_1_Nov__c &gt;= 1 &amp;&amp; Count_of_Officers_Elect_by_1_Nov__c &gt;= 3, TRUE, FALSE)</formula>
        <label>Elect CC and 3/more Officers by 1 Nov</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Events_with_WPO__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Events with YPO Gold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Year__c</fullName>
        <label>Financial Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013/14</fullName>
                </value>
                <value>
                    <fullName>2014/15</fullName>
                </value>
                <value>
                    <fullName>2015/16</fullName>
                </value>
                <value>
                    <fullName>2016/17</fullName>
                </value>
                <value>
                    <fullName>2017/18</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <formula>CASE(MONTH( Today() + 1), 
7, &quot;Q1&quot;, 
8, &quot;Q1&quot;, 
9, &quot;Q1&quot;, 
10, &quot;Q2&quot;, 
11, &quot;Q2&quot;, 
12, &quot;Q2&quot;, 
1, &quot;Q3&quot;, 
2, &quot;Q3&quot;, 
3, &quot;Q3&quot;, 
4, &quot;Q4&quot;, 
5, &quot;Q4&quot;, 
6, &quot;Q4&quot;, 
&quot;NA&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <formula>RIGHT(Text( Fiscal_Year__c ) ,4)+&quot;-07-01&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year End</label>
        <type>Text</type>
    </fields>
</CustomObject>